# V3l0city

./: .gitignore  README.md  app.json  kalmanjs.d.ts  package-lock.json  package.json  tsconfig.json
__tests__/: AccountSyncScreen.test.tsx  InsightsScreen.test.tsx  SideDrawer.test.tsx  TripHistory.test.tsx  cloudConfig.test.ts  coarseLocation.test.ts  driveSurfaceSnapshot.test.ts  exportService.test.ts  headingAnimation.test.ts  insightsAnalytics.test.ts  kalmanAdapter.test.ts  motionMath.test.ts  onboardingStorage.test.ts  sensorGuards.test.ts  socialProvider.test.ts  speedMath.test.ts  speedometerMenu.test.ts  supabaseSchema.test.ts  telemetryApi.test.ts  useKalmanSpeedFilter.test.tsx  (+2 more)
app/: index.tsx
modules/v3l0city-speed-engine/android/: CMakeLists.txt  build.gradle
modules/v3l0city-speed-engine/android/src/main/: AndroidManifest.xml
modules/v3l0city-speed-engine/android/src/main/cpp/: V3l0citySpeedEngineJni.cpp
modules/v3l0city-speed-engine/android/src/main/java/com/v3l0city/speedengine/: DriveSurfaceWidget.kt  LiveDriveSessionManager.kt  SpeedEngineJni.kt  V3l0citySpeedEngineModule.kt
modules/v3l0city-speed-engine/android/src/main/res/drawable/: v3l0city_drive_widget_background.xml  v3l0city_drive_widget_progress.xml
modules/v3l0city-speed-engine/android/src/main/res/layout/: v3l0city_drive_widget.xml  v3l0city_drive_widget_compact.xml  v3l0city_drive_widget_expanded.xml
modules/v3l0city-speed-engine/android/src/main/res/values/: v3l0city_drive_widget_strings.xml
modules/v3l0city-speed-engine/android/src/main/res/xml/: v3l0city_drive_widget.xml
(+166 files in other folders)
